[B]0.4.6[/B]
Changes to offset OSD (new style)
Moved OSD controls for tabbed to lower part of screen
Full-width option for both styles
Improvements to OSD modular navigation
Addition of DialogSubtitles.xml plus Gotham subs OSD button (untested)
Added a monospaced font for Seekbar timer

[B]0.4.5[/B]
Consolidation of OSD info views
  -- Small now called 'offset'
  -- Medium now called 'tabbed'
  -- On-screen called 'on-screen'
  -- Full-width removed
Music OSD uses artistslideshow additional info (bio, similar, discog)
Fixed Onscreen music-osd icon size
Fixed Offset music-osd icon spacing
Onscreen video updates
Fixed cover fade for music info wall

[B]0.4.4[/B]
Updates to on-screen music info view
Updates to on-screen music osd

[B]0.4.3[/B]
Updated translations from transifex
Added option for "on-screen" music info
Set default focus to subtitles
Minor tweak to simple home - submenu on click up from submenu closes it
Fix lovefilm in sets - no item preload so reports right page number
Fix broken addon text overlapping
Fix choose art option for episodes
Add scrolling text to panel list focused item
Change default director icon to clapboard

[B]0.4.2[/B]
Altered mixed widget scroll behaviour to be up for simple and down for panel
Added option to scroll between 'simple' widget types on up/down as default
 -- option to prevent in Skin Settings > Home > Manage custom widgets
Added no-videologo.png and no-musiclogo.png to extras/widgets folder 
 -- change these for what displays when no clearlogo is available to widgets
Changed Artwork Downloader to download bulk depending on its own settings
Fixed widget label persistence when other menu ids are open
Added "Launch" button for Addon info

[B]0.4.1[/B]
Fixed focus of mixed widget to first item
Fixed clock always showing in music vis
Fixed double assignment of ids in "View Options"
Swapped In-progress and Spotlight on mixed widget
Added falback icon for logos on widget information

[B]0.4.0[/B]
Addition of Mixed Widget