@@ -1,8 +1,8 @@
 <window>
     <defaultcontrol>23</defaultcontrol>
-    <visible>Window.IsActive(fullscreenvideo) + !Window.IsActive(script.pseudotv.TVOverlay.xml) + !Window.IsActive(script.pseudotv.live.TVOverlay.xml) + [[!IsEmpty(Window(seekbar).Property(ShowInfo)) + Window.IsActive(videoosd)] | Player.Seeking | Player.DisplayAfterSeek | Player.Paused | Player.Forwarding | Player.Rewinding | Window.IsVisible(fullscreeninfo)]</visible>
+    <visible>Window.IsActive(fullscreenvideo) + !Window.IsActive(script.pseudotv.TVOverlay.xml) + !Window.IsActive(script.pseudotv.live.TVOverlay.xml) + [[!IsEmpty(Window(seekbar).Property(ShowInfo)) + Window.IsActive(videoosd)] | Player.Seeking | Player.DisplayAfterSeek | Player.Paused | Player.Forwarding | Player.Rewinding | Player.ShowInfo | Window.IsVisible(fullscreeninfo)]</visible>
     <onunload>ClearProperty(ShowInfo,seekbar)</onunload>
-    <onunload>ClearProperty(ExtendPlot,seekbar)</onunload>
+    <onunload>ClearProperty(ExtendPlot,seekbar)</onunload> 
     <controls>
     	<!-- TABBED -->
     	<control type="group">
@@ -398,7 +398,7 @@
 					<posy>770</posy>
 					<control type="group">
 						<control type="group">
-							<visible>!IsEmpty(Window(seekbar).Property(ExtendPlot)) | stringcompare(Skin.String(video.seekbar.type),small) | [IsEmpty(Window(seekbar).Property(ShowNext)) + !Player.ShowInfo + !Window.IsVisible(fullscreeninfo)]</visible>
+							<visible>!IsEmpty(Window(seekbar).Property(ExtendPlot)) | stringcompare(Skin.String(video.seekbar.type),small) | [IsEmpty(Window(seekbar).Property(ShowNext)) + !Player.ShowInfo + !Window.IsActive(fullscreeninfo)]</visible>
 							<animation type="Visible" reversible="false">
 								<effect type="fade" start="0" end="100" time="250" tween="sine" easing="inout" />
 							</animation>
